<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SampleAndroidApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="button_signin">Sign In</string>
    <string name="editText_NIP">NIP</string>
    <string name="editText_NIPPassword">Password</string>
    <string name="textView_Daftar">Daftar ?</string>
    <string name="title_activity_dashboard_main">DashboardMainActivity</string>
    <string name="title_activity_daftar">DaftarActivity</string>
    <string name="buttonCamera">Camera</string>
    <string name="buttonGallery">Gallery</string>
    <string name="editTextName">Name</string>
    <string name="editTextNIP">NIP</string>
    <string name="editTextPassword">Password</string>
    <string name="editTextEmail">E-Mail</string>
    <string name="editTextSimpan">Simpan</string>
    <string name="editTextBatal">Batal</string>
    <string name="title_activity_detail_mahasiswa">DetailMahasiswaActivity</string>
    <string name="textViewUMUR">UMUR</string>
    <string name="textViewALAMAT">ALAMAT</string>
    <string name="textViewABSEN">ABSEN</string>
    <string name="buttonCAMERA">CAMERA</string>
    <string name="buttonGALLERY">GALLERY</string>
    <string name="textViewIsi">Isi data mahasiswa</string>
    <string name="editTextNRP">NRP</string>
    <string name="editTextNama">Nama</string>
    <string name="radioLakiLaki">Laki-Laki</string>
    <string name="radioPerempuan">Perempuan</string>
    <string name="editTextTanggalLahir">Tanggal Lahir</string>
    <string name="editTextPilih">Pilih Tanggal</string>
    <string name="editTextAlamat">Alamat</string>
    <string name="editTextHint">Telp</string>
    <string name="editTextEmail2">Email</string>
    <string name="tambah">itemTambah</string>
    <string name="logout">itemLogout</string>
    <string name="keluar">itemKeluar</string>

</resources>
