<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.ahmadfauzi.sampleandroidapp.login.DaftarActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/pp"
        android:scaleType="fitCenter" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/buttonCamera"
            android:id="@+id/buttonCamera"
            android:layout_gravity="center_horizontal"
            android:onClick="ambilFotoDosen" />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/buttonGallery"
            android:id="@+id/buttonGallery"
            android:layout_gravity="center_horizontal"
            android:onClick="takeFromGallery" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextNIP"
            android:hint="@string/editTextNIP" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/editTextName"
            android:ems="10"
            android:id="@+id/editTextName" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText3"
            android:hint="@string/editTextPassword" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText4"
            android:hint="@string/editTextEmail" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editTextSimpan"
            android:id="@+id/buttonSimpan"
            android:onClick="simpanDosen" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editTextBatal"
            android:id="@+id/buttonBatal"
            android:onClick="batal" />
    </LinearLayout>

</LinearLayout>
