<?xml version="1.0" encoding="utf-8"?>
<!-- The background enables the activation appearance on tablets -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingRight="8dp"
    android:showDividers="middle|beginning|end"
    android:paddingTop="5dp"
    android:paddingLeft="0dp"
    android:paddingBottom="5dp"
    >

    <com.example.ahmadfauzi.sampleandroidapp.util.CircularImageView
        android:id="@+id/list_item_foto_mhs"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:adjustViewBounds="false"
        android:scaleType="fitCenter"
        android:src="@drawable/user_photo"
        android:layout_marginLeft="10dp"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="0dp"
        android:paddingLeft="4dp"
        android:paddingBottom="5dp"
        android:layout_marginLeft="10dp">

        <TextView
            android:id="@+id/list_item_nama_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:ellipsize="end"
            android:text="Nama Mahasiswa"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="14dp"
            android:lines="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="NRP"
            android:id="@+id/tvListItemNrpMhs"
            android:textSize="12dp"
            android:layout_marginTop="3dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="0dp">

            <LinearLayout
                android:id="@+id/mhs_umur_list_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textViewUMUR"
                    android:textColor="#99333333"
                    android:textSize="10sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/list_item_mhs_umur"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#333333"
                    android:textSize="10sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/mhs_pekerjaan_list_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textViewALAMAT"
                    android:textColor="#99333333"
                    android:textSize="10sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/list_item_alamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#333333"
                    android:textSize="10sp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/mhs_absen_list_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textViewABSEN"
                    android:textColor="#99333333"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    android:textAlignment="center" />
                <TextView
                    android:id="@+id/list_item_absen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#333333"
                    android:textAlignment="center"
                    android:textSize="10sp" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
